Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/rawDiags/Error.out
Error.java:10:1: compiler.err.premature.eof
1 error
